Add user routes (#2919)
