# apps/uno/docs/swagger.yaml
@@ -9,6 +9,13 @@ definitions:
     required:
     - name
     type: object
+  http_routes_api.DegreeResponse:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+    type: object
   http_routes_api.GroupResponse:
     properties:
       id:
@@ -43,6 +50,50 @@ definitions:
         type: string
     required:
     - name
+    type: object
+  http_routes_api.UserGroupResponse:
+    properties:
+      id:
+        type: string
+      isLeader:
+        type: boolean
+      name:
+        type: string
+    type: object
+  http_routes_api.UserResponse:
+    properties:
+      alternativeEmail:
+        type: string
+      birthday:
+        type: string
+      createdAt:
+        type: string
+      degree:
+        $ref: '#/definitions/http_routes_api.DegreeResponse'
+      email:
+        type: string
+      groups:
+        items:
+          $ref: '#/definitions/http_routes_api.UserGroupResponse'
+        type: array
+      hasReadTerms:
+        type: boolean
+      id:
+        type: string
+      image:
+        type: string
+      isPublic:
+        type: boolean
+      lastSignInAt:
+        type: string
+      name:
+        type: string
+      type:
+        type: string
+      updatedAt:
+        type: string
+      year:
+        type: integer
     type: object
   uno_domain_model.BanInfo:
     properties:
@@ -914,6 +965,21 @@ paths:
       tags:
       - feedbacks
   /group:
+    get:
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/http_routes_api.GroupResponse'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get a list of all groups
+      tags:
+      - groups
     post:
       consumes:
       - application/json
@@ -1502,6 +1568,58 @@ paths:
       summary: Gets users with strikes and bans
       tags:
       - strikes
+  /users:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/http_routes_api.UserResponse'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Gets a list of all users
+      tags:
+      - users
+  /users/{id}:
+    get:
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/http_routes_api.UserResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "404":
+          description: User Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Gets a user by ID
+      tags:
+      - users
   /weather/yr:
     get:
       produces:
